<resources>
    <string name="app_name">WordGame</string>
    <string name="play_word_game">Play Word Game</string>
    <string name="view_statistics">View Statistics</string>
    <string name="minutes_to_end">Minutes To End</string>
    <string name="square_board_size">Square Board Size</string>
    <string name="weight_of_letters">Weight Of Letters</string>
    <string name="score">Score</string>
    <string name="start_score_text">0</string>
    <string name="write_the_word">Write the word</string>
    <string name="letter">Letter</string>
    <string name="weight">Weight</string>
    <string name="set_weight">Set Weight</string>
    <string name="player_scores">Player Scores</string>
    <string name="word_points">Word Points</string>
    <string name="score_statistic">Score Statistic</string>
    <string name="word_statistic">Word Statistic</string>
    <string name="scoreWithPostfix">Score:</string>
    <string name="reset_count">Reset Count:</string>
    <string name="words_entered">Words Entered:</string>
    <string name="used_in_games">Used In Games:</string>
    <string name="word">Word:</string>
</resources>
