<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayWordGameActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/score_title"
        android:text="@string/score"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/score_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_score_text"
        android:textAlignment="center"
        android:layout_margin="2dp"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/score_title" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/word_recycler_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:layout_constraintBottom_toTopOf="@+id/timer_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/score_text" />

    <TextView
        android:id="@+id/timer_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:textAlignment="textStart"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/word_edit_text"
        app:layout_constraintEnd_toStartOf="@+id/board_refresh_button"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/board_refresh_button"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_margin="5dp"
        android:background="@null"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_refresh_black_24dp"
        app:layout_constraintBottom_toTopOf="@+id/word_enter_button"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/word_edit_text"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:hint="@string/write_the_word"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/word_enter_button"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/word_enter_button"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_margin="5dp"
        android:background="@null"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_check_circle_black_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/word_edit_text" />

</androidx.constraintlayout.widget.ConstraintLayout>