<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/score_item_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scoreWithPostfix"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:layout_marginStart="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/score_item_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_alignRight="@+id/score_item_title"
                android:text="100"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/score_item_title"
                app:layout_constraintStart_toEndOf="@+id/score_item_title"
                app:layout_constraintTop_toTopOf="@+id/score_item_title" />

            <TextView
                android:id="@+id/reset_item_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset_count"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                app:layout_constraintEnd_toStartOf="@id/reset_item_text"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/reset_item_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/score_item_title"
                android:text="100"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/reset_item_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/reset_item_title"
                android:layout_marginRight="20dp"/>


            <TextView
                android:id="@+id/word_item_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/words_entered"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:layout_marginRight="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/score_item_title" />

            <TextView
                android:id="@+id/word_item_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/score_item_title"
                android:text="100"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/word_item_title"
                app:layout_constraintTop_toBottomOf="@+id/reset_item_title" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>